--- a/src/common/low_precision_transformations/CMakeLists.txt
+++ b/src/common/low_precision_transformations/CMakeLists.txt
@@ -56,3 +56,10 @@ set_target_properties(${TARGET_NAME}_obj PROPERTIES INTERPROCEDURAL_OPTIMIZATION
 if(ENABLE_TESTS)
     add_subdirectory(tests)
 endif()
+
+# install
+
+install(DIRECTORY "${PUBLIC_HEADERS_DIR}/"
+        DESTINATION developer_package/include/openvino_core_dev
+        COMPONENT developer_package
+        EXCLUDE_FROM_ALL)
