--- a/src/tests/ov_helpers/ov_models/CMakeLists.txt
+++ b/src/tests/ov_helpers/ov_models/CMakeLists.txt
@@ -20,7 +20,7 @@ ov_add_target(
             PUBLIC
                 openvino::runtime
                 openvino::reference
-                interpreter_backend
+                openvino::interpreter_backend
                 openvino::runtime::dev
                 common_test_utils
         ADD_CLANG_FORMAT
