--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           repository: 'openvinotoolkit/openvino_contrib'
           path: 'openvino_contrib'
+          ref: 'master'
 
       #
       # Dependencies
