--- a/cmake/templates/OpenVINODeveloperPackageConfig.cmake.in
+++ b/cmake/templates/OpenVINODeveloperPackageConfig.cmake.in
@@ -10,12 +10,12 @@ set(OV_RELOCATABLE_DEVELOPER_PACKAGE "@OV_RELOCATABLE_DEVELOPER_PACKAGE@")
 
 if(OV_RELOCATABLE_DEVELOPER_PACKAGE)
     # OpenVINODevScripts is installed to current directory
-    set(OpenVINODevScripts_DIR "${CMAKE_CURRENT_LIST_DIR}")
+    set(OpenVINODeveloperScripts_DIR "${CMAKE_CURRENT_LIST_DIR}")
 else()
     # OpenVINO_SOURCE_DIR is not available when we transter developer package to another machine
     set_and_check(OpenVINO_SOURCE_DIR "@OpenVINO_SOURCE_DIR@")
     # path to cmake/developer_package
-    set(OpenVINODevScripts_DIR "${OpenVINO_SOURCE_DIR}/cmake/developer_package")
+    set(OpenVINODeveloperScripts_DIR "${OpenVINO_SOURCE_DIR}/cmake/developer_package")
     # extra arguments for find_package(OpenVINO)
     set(OpenVINO_FIND_PACKAGE_ARGS PATHS "${CMAKE_CURRENT_LIST_DIR}"
                                    NO_CMAKE_FIND_ROOT_PATH
