--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -389,7 +389,7 @@ jobs:
 
           set PYTHONPATH=${{ env.OPENVINO_REPO }}\tools\mo;${{ env.LAYER_TESTS_INSTALL_DIR }};%PYTHONPATH%
 
-          python3 -m pytest ${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests -k 'not cuda' ^
+          python3 -m pytest ${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests -k "not cuda" ^
           --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-onnx_frontend.xml ^
           --ignore=${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests/test_python/test_zoo_models.py ^
           --ignore=${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests/test_python/test_backend.py
