Try ilya-lavrenov repo

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1373,9 +1373,9 @@ jobs:
       - name: Clone OpenVINO Contrib
         uses: actions/checkout@v4
         with:
-          repository: 'openvinotoolkit/openvino_contrib'
+          repository: 'ilya-lavrenov/openvino_contrib'
           path: ${{ env.OPENVINO_CONTRIB_REPO }}
-          ref: 'master'
+          ref: 'compilation'
 
       #
       # Dependencies
