--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1131,7 +1131,6 @@ jobs:
           PIP_VER=$(python3 -c "import pip; print(pip.__version__)")
           echo "Using pip version: ${PIP_VER}"
           echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
-          sudo chown -R $USER $PIP_CACHE_DIR
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
@@ -1225,6 +1224,7 @@ jobs:
         run: |
           PIP_VER=$(python3 -c "import pip; print(pip.__version__)")
           echo "Using pip version: ${PIP_VER}"
+          sudo chown -R $USER ${PIP_CACHE_PATH}/${PIP_VER}
           echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
 
       - name: Install python dependencies
