--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1224,7 +1224,7 @@ jobs:
         run: |
           PIP_VER=$(python3 -c "import pip; print(pip.__version__)")
           echo "Using pip version: ${PIP_VER}"
-          chown -R $USER ${PIP_CACHE_PATH}/${PIP_VER}
+          chown -hR ${USER} ${PIP_CACHE_PATH}/${PIP_VER}
           echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
 
       - name: Install python dependencies
